Update the CMake files to include array lib and test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,13 +5,12 @@ project(cmicro C)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")
 
 # setting output
-set(CMAKE_BINARY_DIR "${CMAKE_SOURCE_DIR}/bin")
-set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib")
 
 # group source files
 # libraries:  file(GLOB UPPER_CASE_LIB_NAME_SRC src/files.c)
 # executable: files(GLOB MAIN_SRC src/main.c)
+file(GLOB ARRAY_SRC src/array.c)
 
 # sources end
 
@@ -28,8 +27,10 @@ include_directories(include)
 # output files:
 # libraries: add_library("library_name" SHARED | STATIC "${VAR_WITH_SOURCES}")
 # executable: add_executable(${PROJECT_NAME} ${MAIN_SRC})
+add_library("array" SHARED "${ARRAY_SRC}")
 
 enable_testing()
 add_subdirectory(test)
 # add test as follow
 # add_test(test_name test/test_name "${CURRENT_LIST_DIR}")
+add_test(create_array test/create_array)
