--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,3 @@
 # for each test add 2 lines, add_executable and target_link_libraries
-# add_executable(test_name file_test.c)
+# add_executable(test_name file_test.cc)
 # target_link_libraries(test_name library_name)
