--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,8 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib")
 # group source files
 # libraries:  file(GLOB UPPER_CASE_LIB_NAME_SRC src/files.cc)
 # executable: file(GLOB MAIN_SRC src/main.cc)
+file(GLOB BUFFER_SRC src/buffer.cc)
+file(GLOB MESSAGE_SRC src/message.cc)
 
 # sources end
 
@@ -26,8 +28,11 @@ include_directories(include)
 # output files:
 # libraries: add_library("library_name" SHARED | STATIC "${VAR_WITH_SOURCES}")
 # executable: add_executable(${PROJECT_NAME} ${MAIN_SRC})
+add_library("buffer" SHARED "${BUFFER_SRC}")
+add_library("message" SHARED "${MESSAGE_SRC}")
 
 enable_testing()
 add_subdirectory(test)
 # add test as follow
 # add_test(test_name test/test_name "${CURRENT_LIST_DIR}")
+add_test(create_buffer test/create_buffer)
