Add unit tests for the new Micro's exceptions

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,3 +7,7 @@ target_link_libraries(create_buffer message)
 add_executable(push_pop buffer/push_pop.cc)
 target_link_libraries(push_pop buffer)
 target_link_libraries(push_pop message)
+add_executable(micro_exception exception/micro_exception.cc)
+target_link_libraries(micro_exception exception)
+add_executable(buffer_overflow exception/buffer_overflow.cc)
+target_link_libraries(buffer_overflow exception)
