--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,3 +41,5 @@ add_subdirectory(test)
 # add_test(test_name test/test_name "${CURRENT_LIST_DIR}")
 add_test(create_buffer test/create_buffer)
 add_test(push_pop test/push_pop)
+add_test(micro_exception test/micro_exception)
+add_test(buffer_overflow test/buffer_overflow)
