--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,9 +3,11 @@
 # target_link_libraries(test_name library_name)
 add_executable(create_buffer buffer/create_buffer.cc)
 target_link_libraries(create_buffer buffer)
+target_link_libraries(create_buffer exception)
 target_link_libraries(create_buffer message)
 add_executable(push_pop buffer/push_pop.cc)
 target_link_libraries(push_pop buffer)
+target_link_libraries(push_pop exception)
 target_link_libraries(push_pop message)
 add_executable(micro_exception exception/micro_exception.cc)
 target_link_libraries(micro_exception exception)
